--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -30,10 +30,8 @@
         --color-error: #DB3A1B;
 
         --color-font-dark: #222222;
-        --color-font-semidark: #333333;
         --color-font-normal: #444444;
         --color-font-light: #555555;
-        --color-font-superlight: #999999;
         
         /* Variabelen Typografie */
         --font-family-sans:'Geomanist', 'Helvetica Neue', 'Helvetica', sans-serif;
